Always use WS_ prefix for web socket server classes (and common). Changed the structure of the package, to follow similar logic for server and client.

--- a/server/src/README
+++ b/server/src/README
@@ -1,5 +1,3 @@
-Eiffel Web Nino is and HTTPD server. It's a work in progress, so maybe it will be refactored.
+Eiffel Web Nino is an HTTPD server. It's a work in progress, so maybe it will be refactored.
 The goal of is to provide a simple web server for development (like Java, Python and Ruby provide)
-
-
 
